fix spacing fr

--- a/src/index.css
+++ b/src/index.css
@@ -65,11 +65,12 @@ span {
 
 .carousel {
   color: black;
+  padding-bottom: 3vh;
 }
 
 .carousel-item {
   padding-right: 0vw;
-  min-height: 85vh;
+  min-height: 90vh;
 }
 
 @media (min-width: 992px) {
